--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -527,6 +527,7 @@ img.logo {
 }
 
 .section-contact-us{
+    padding-top: 15%;
     background-color: #000000e0;
     color: #FFF;
     background-position: center;
