--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -589,3 +589,10 @@ img.logo {
 .fa-3x {
     font-size: 24px;
 }
+
+.banner-image {
+    /*position: absolute;*/
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover !important;
+}
