--- a/assets/css/now-ui-kit.css
+++ b/assets/css/now-ui-kit.css
@@ -3289,7 +3289,8 @@ p.description {
 body {
     color: #2c2c2c;
     font-size: 14px;
-    font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
+    /*font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;*/
+    font-family: "Arabic Typesetting", Arial, sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
 }
@@ -4270,6 +4271,13 @@ Created using IcoMoon - icomoon.io
     font-family: 'Nucleo Outline';
     src: url("../fonts/nucleo-outline.eot");
     src: url("../fonts/nucleo-outline.eot") format("embedded-opentype"), url("../fonts/nucleo-outline.woff2") format("woff2"), url("../fonts/nucleo-outline.woff") format("woff"), url("../fonts/nucleo-outline.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Arabic Typesetting';
+    src: url("../fonts/arabtype.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
