--- a/assets/css/now-ui-kit.css
+++ b/assets/css/now-ui-kit.css
@@ -3289,8 +3289,8 @@ p.description {
 body {
     color: #2c2c2c;
     font-size: 14px;
-    /*font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;*/
-    font-family: "Arabic Typesetting", Arial, sans-serif;
+    font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
+    /*font-family: "Arabic Typesetting", Arial, sans-serif;*/
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
 }
