--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -33,7 +33,7 @@
 .cb-slideshow li div {
     z-index: 1000;
     position: absolute;
-    bottom: 10px;
+    bottom: 200px;
     left: 0px;
     width: 100%;
     text-align: right;
@@ -49,7 +49,7 @@
     font-size: 160px;
     padding: 0 30px;
     line-height: 120px;
-    color: rgba(169,3,41, 0.8);
+    color: #FFF;
 }
 .cb-slideshow li:nth-child(1) span { background-image: url(../banners/6.jpg) }
 .cb-slideshow li:nth-child(2) span {
