--- a/assets/css/now-ui-kit.css
+++ b/assets/css/now-ui-kit.css
@@ -3366,7 +3366,7 @@ body {
 }
 
 .separator.separator-primary {
-    background-color: #f96332;
+    background-color: #171515;
 }
 
 .nav-pills .nav-item .nav-link {
