added buttons for caontact

--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -493,7 +493,7 @@ img.logo {
 }
 
 .page-header.page-header-small {
-    height: 100vh !important;
+    min-height: 100vh !important;
     max-height: 6000px;
 }
 
@@ -512,7 +512,7 @@ img.logo {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh !important;
+    min-height: 100vh !important;
     max-height: 6000px;
 }
 
@@ -521,7 +521,7 @@ img.logo {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh !important;
+    min-height: 100vh !important;
     max-height: 6000px;
 }
 
@@ -531,14 +531,14 @@ img.logo {
     color: #FFF;
     background-position: center;
     background-size: cover;
-    height: 100vh !important;
+    min-height: 100vh !important;
     max-height: 6000px;
 }
 
 .section-team{
     background-position: center;
     background-size: cover;
-    height: 100vh !important;
+    min-height: 100vh !important;
     max-height: 6000px;
 }
 
@@ -681,6 +681,7 @@ video {
     display: inline-block;
     padding-left: 20px;
     padding-right:20px;
+    font-size: 1.15em;
 }
 
 .col-sm-12.address-block > .address {
@@ -695,4 +696,23 @@ p {
 
 .p-5 {
     padding: 0.5rem!important;
+}
+
+.btn-white {
+    background: #FFF;
+    color: #000 !important;
+    font-size: 1.29em;
+}
+
+p {
+    line-height: 0.95em;
+}
+
+.contact-form {
+    margin-top: 30px;
+}
+
+.footer .copyright {
+    margin-top: 10px;
+    font-size: 1.3571em;
 }
