--- a/assets/css/now-ui-kit.css
+++ b/assets/css/now-ui-kit.css
@@ -96,7 +96,7 @@
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-brown,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-brown {
     color: #fff;
-    background: #f96332;
+    background: #151414;
 }
 
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-blue,
@@ -271,7 +271,7 @@
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-brown~.bootstrap-switch-default {
-    background-color: #f96332;
+    background-color: #151414;
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-blue~.bootstrap-switch-default {
@@ -615,7 +615,7 @@
 
 .slider.slider-primary .noUi-connect,
 .slider.slider-primary.noUi-connect {
-    background-color: #f96332;
+    background-color: #151414;
 }
 
 .slider.slider-primary.noUi-target {
@@ -623,7 +623,7 @@
 }
 
 .slider.slider-primary .noUi-handle {
-    background-color: #f96332;
+    background-color: #151414;
 }
 
 .slider.slider-info .noUi-connect,
@@ -710,7 +710,7 @@
 }
 
 .datepicker.datepicker-primary {
-    background-color: #f96332;
+    background-color: #151414;
 }
 
 .datepicker.datepicker-primary th,
@@ -720,11 +720,11 @@
 }
 
 .datepicker.datepicker-primary:after {
-    border-bottom-color: #f96332;
+    border-bottom-color: #151414;
 }
 
 .datepicker.datepicker-primary.datepicker-orient-top:after {
-    border-top-color: #f96332;
+    border-top-color: #151414;
 }
 
 .datepicker.datepicker-primary .dow {
@@ -755,7 +755,7 @@
 .datepicker.datepicker-primary table tr td.active.disabled div,
 .datepicker.datepicker-primary table tr td.active.disabled:hover div {
     background-color: #FFFFFF;
-    color: #f96332;
+    color: #151414;
 }
 
 .datepicker.datepicker-primary table tr td.day:hover div,
@@ -826,7 +826,7 @@
 .datepicker.datepicker-primary table tr td span.active:hover[disabled],
 .datepicker.datepicker-primary table tr td span.active.disabled[disabled],
 .datepicker.datepicker-primary table tr td span.active.disabled:hover[disabled] {
-    color: #f96332;
+    color: #151414;
 }
 
 .datepicker-inline {
@@ -941,7 +941,7 @@
 }
 
 .datepicker th {
-    color: #f96332;
+    color: #151414;
 }
 
 .table-condensed>tbody>tr>td,
@@ -1167,7 +1167,7 @@
 .datepicker table tr td.active:hover div,
 .datepicker table tr td.active.disabled div,
 .datepicker table tr td.active.disabled:hover div {
-    background-color: #f96332;
+    background-color: #151414;
     color: #FFFFFF;
     box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
 }
@@ -1192,7 +1192,7 @@
 .datepicker table tr td.active:hover[disabled] div,
 .datepicker table tr td.active.disabled[disabled] div,
 .datepicker table tr td.active.disabled:hover[disabled] div {
-    background-color: #f96332;
+    background-color: #151414;
 }
 
 .datepicker table tr td.active:active,
@@ -1237,7 +1237,7 @@
 .datepicker table tr td span.active.disabled,
 .datepicker table tr td span.active.disabled:hover {
     color: #fff;
-    background-color: #f96332;
+    background-color: #151414;
 }
 
 .datepicker table tr td span.active:hover,
@@ -1260,7 +1260,7 @@
 .datepicker table tr td span.active:hover[disabled],
 .datepicker table tr td span.active.disabled[disabled],
 .datepicker table tr td span.active.disabled:hover[disabled] {
-    background-color: #f96332;
+    background-color: #151414;
     box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -1384,7 +1384,7 @@
     border-radius: 0.1875rem;
     padding: 11px 22px;
     cursor: pointer;
-    background-color: #888;
+    background-color: #353535;
     color: #FFFFFF;
 }
 
@@ -1591,7 +1591,7 @@ fieldset[disabled] .navbar .navbar-nav>a.btn.active {
 }
 
 .btn-primary {
-    background-color: #f96332;
+    background-color: #151414;
     color: #FFFFFF;
 }
 
@@ -1639,13 +1639,13 @@ fieldset[disabled] .btn-primary:focus,
 fieldset[disabled] .btn-primary.focus,
 fieldset[disabled] .btn-primary:active,
 fieldset[disabled] .btn-primary.active {
-    background-color: #f96332;
-    border-color: #f96332;
+    background-color: #151414;
+    border-color: #151414;
 }
 
 .btn-primary.btn-simple {
-    color: #f96332;
-    border-color: #f96332;
+    color: #151414;
+    border-color: #151414;
 }
 
 .btn-primary.btn-simple:hover,
@@ -1658,7 +1658,7 @@ fieldset[disabled] .btn-primary.active {
 }
 
 .btn-primary.btn-link {
-    color: #f96332;
+    color: #151414;
 }
 
 .btn-primary.btn-link:hover,
@@ -1992,7 +1992,7 @@ fieldset[disabled] .btn-danger.active {
 
 .btn-neutral {
     background-color: #FFFFFF;
-    color: #f96332;
+    color: #151414;
 }
 
 .btn-neutral:hover,
@@ -2309,7 +2309,7 @@ fieldset[disabled] .btn-link.active {
 }
 
 .form-control:focus {
-    border: 1px solid #f96332;
+    border: 1px solid #151414;
     -webkit-box-shadow: none;
     box-shadow: none;
     outline: 0 !important;
@@ -2318,7 +2318,7 @@ fieldset[disabled] .btn-link.active {
 
 .form-control:focus+.input-group-addon,
 .form-control:focus~.input-group-addon {
-    border: 1px solid #f96332;
+    border: 1px solid #151414;
     border-left: none;
     background-color: transparent;
 }
@@ -2549,7 +2549,7 @@ fieldset[disabled] .btn-link.active {
 
 .input-group-focus .input-group-addon {
     background-color: #FFFFFF;
-    border-color: #f96332;
+    border-color: #151414;
 }
 
 .input-group-focus.form-group-no-border .input-group-addon {
@@ -2869,12 +2869,12 @@ textarea.form-control:active {
 }
 
 .progress-container.progress-primary .progress-bar {
-    background: #f96332;
+    background: #151414;
 }
 
 .progress-container.progress-primary .progress-value,
 .progress-container.progress-primary .progress-badge {
-    color: #f96332;
+    color: #151414;
 }
 
 .progress-container.progress-info .progress {
@@ -2958,8 +2958,8 @@ textarea.form-control:active {
 }
 
 .badge-primary {
-    border-color: #f96332;
-    color: #f96332;
+    border-color: #151414;
+    color: #151414;
 }
 
 .badge-info {
@@ -3060,8 +3060,8 @@ textarea.form-control:active {
 .pagination.pagination-primary .page-item.active>.page-link,
 .pagination.pagination-primary .page-item.active>.page-link:focus,
 .pagination.pagination-primary .page-item.active>.page-link:hover {
-    background-color: #f96332;
-    border-color: #f96332;
+    background-color: #151414;
+    border-color: #151414;
 }
 
 .pagination.pagination-warning .page-item.active>.page-link,
@@ -3093,7 +3093,7 @@ textarea.form-control:active {
 .pagination.pagination-neutral .page-item.active>.page-link:hover {
     background-color: #FFFFFF;
     border-color: #FFFFFF;
-    color: #f96332;
+    color: #151414;
 }
 
 button,
@@ -3118,12 +3118,12 @@ small {
 }
 
 a {
-    color: #f96332;
+    color: #151414;
 }
 
 a:hover,
 a:focus {
-    color: #f96332;
+    color: #151414;
 }
 
 h1,
@@ -3222,7 +3222,7 @@ p.description {
 }
 
 .text-primary {
-    color: #f96332 !important;
+    color: #151414 !important;
 }
 
 .text-info {
@@ -3260,12 +3260,12 @@ p.description {
 }
 
 .blockquote.blockquote-primary {
-    border-color: #f96332;
-    color: #f96332;
+    border-color: #151414;
+    color: #151414;
 }
 
 .blockquote.blockquote-primary small {
-    color: #f96332;
+    color: #151414;
 }
 
 .blockquote.blockquote-danger {
@@ -3414,13 +3414,13 @@ body {
 .nav-pills.nav-pills-neutral .nav-item .nav-link.active:focus,
 .nav-pills.nav-pills-neutral .nav-item .nav-link.active:hover {
     background-color: #FFFFFF;
-    color: #f96332;
+    color: #151414;
 }
 
 .nav-pills.nav-pills-primary .nav-item .nav-link.active,
 .nav-pills.nav-pills-primary .nav-item .nav-link.active:focus,
 .nav-pills.nav-pills-primary .nav-item .nav-link.active:hover {
-    background-color: #f96332;
+    background-color: #151414;
 }
 
 .nav-pills.nav-pills-info .nav-item .nav-link.active,
@@ -3547,8 +3547,8 @@ body {
 }
 
 .nav-tabs.nav-tabs-primary>.nav-item>.nav-link.active {
-    border-color: #f96332;
-    color: #f96332;
+    border-color: #151414;
+    color: #151414;
 }
 
 .nav-tabs.nav-tabs-info>.nav-item>.nav-link.active {
@@ -3733,7 +3733,7 @@ body {
 }
 
 .bg-primary {
-    background-color: #f96332 !important;
+    background-color: #151414 !important;
 }
 
 .bg-info {
@@ -4090,7 +4090,7 @@ img {
 }
 
 .popover.popover-primary {
-    background-color: #f96332;
+    background-color: #151414;
 }
 
 .popover.popover-primary .popover-body {
@@ -4098,19 +4098,19 @@ img {
 }
 
 .popover.popover-primary.bs-popover-right .arrow:after {
-    border-right-color: #f96332;
+    border-right-color: #151414;
 }
 
 .popover.popover-primary.bs-popover-top .arrow:after {
-    border-top-color: #f96332;
+    border-top-color: #151414;
 }
 
 .popover.popover-primary.bs-popover-bottom .arrow:after {
-    border-bottom-color: #f96332;
+    border-bottom-color: #151414;
 }
 
 .popover.popover-primary.bs-popover-left .arrow:after {
-    border-left-color: #f96332;
+    border-left-color: #151414;
 }
 
 .popover.popover-primary .popover-header {
@@ -4888,7 +4888,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-mini .modal-profile i {
-    color: #f96332;
+    color: #151414;
     font-size: 21px;
 }
 
@@ -4897,7 +4897,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-mini .modal-profile.modal-profile-primary {
-    background-color: #f96332;
+    background-color: #151414;
 }
 
 .modal.modal-mini .modal-profile.modal-profile-danger {
@@ -4934,7 +4934,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-primary .modal-content {
-    background-color: #f96332;
+    background-color: #151414;
     color: #FFFFFF;
 }
 
@@ -5024,7 +5024,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .card[data-background-color="orange"] {
-    background-color: #f96332;
+    background-color: #151414;
 }
 
 .card[data-background-color="red"] {
@@ -5717,7 +5717,7 @@ Created using IcoMoon - icomoon.io
     top: 36%;
     left: 44%;
     font-size: 65px;
-    color: #f96332;
+    color: #151414;
     padding: 1px;
 }
 
@@ -6025,15 +6025,15 @@ Created using IcoMoon - icomoon.io
         transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     }
     .sidebar-collapse .navbar-collapse:before {
-        background: #f96332;
+        background: #151414;
         /* For browsers that do not support gradients */
-        background: -webkit-linear-gradient(#f96332 0%, #000 80%);
+        background: -webkit-linear-gradient(#151414 0%, #000 80%);
         /* For Safari 5.1 to 6.0 */
-        background: -o-linear-gradient(#f96332 0%, #000 80%);
+        background: -o-linear-gradient(#151414 0%, #000 80%);
         /* For Opera 11.1 to 12.0 */
-        background: -moz-linear-gradient(#f96332 0%, #000 80%);
+        background: -moz-linear-gradient(#151414 0%, #000 80%);
         /* For Firefox 3.6 to 15 */
-        background: linear-gradient(#f96332 0%, #000 80%);
+        background: linear-gradient(#151414 0%, #000 80%);
         /* Standard syntax (must be last) */
         opacity: 0.76;
         filter: alpha(opacity=76);
@@ -6903,15 +6903,15 @@ Created using IcoMoon - icomoon.io
         transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     }
     .burger-menu .navbar-collapse:before {
-        background: #f96332;
+        background: #151414;
         /* For browsers that do not support gradients */
-        background: -webkit-linear-gradient(#f96332 0%, #000 80%);
+        background: -webkit-linear-gradient(#151414 0%, #000 80%);
         /* For Safari 5.1 to 6.0 */
-        background: -o-linear-gradient(#f96332 0%, #000 80%);
+        background: -o-linear-gradient(#151414 0%, #000 80%);
         /* For Opera 11.1 to 12.0 */
-        background: -moz-linear-gradient(#f96332 0%, #000 80%);
+        background: -moz-linear-gradient(#151414 0%, #000 80%);
         /* For Firefox 3.6 to 15 */
-        background: linear-gradient(#f96332 0%, #000 80%);
+        background: linear-gradient(#151414 0%, #000 80%);
         /* Standard syntax (must be last) */
         opacity: 0.76;
         filter: alpha(opacity=76);
